# egg

./: .gitignore  CMakeLists.txt  addClass.py  addExport.py  egg.xmind  readme.md
CMakeModules/: FindDX9.cmake  FindMali.cmake  FindNVGLES.cmake  FindOsgEarth.cmake  FindPhysFS.cmake  Findffmpeg.cmake  Findimgui.cmake  Findmaxsdk.cmake  Findrapidxml.cmake  Findrqsdk.cmake  niubiMacroUtils.cmake
CMakeModules/apk/: Apk.cmake  Readme.txt
app/: CMakeLists.txt
app/fbxConvtor/: CMakeLists.txt  Export.cpp  Export.h  ExportAnimation.cpp  ExportCameraAndLight.cpp  ExportLine.cpp  ExportMaterial.cpp  ExportMesh.cpp  ExportProgramAndShader.cpp  ExportSkeleton.cpp  ExportTextureAndImage.cpp  Utils.cpp  Utils.h  gles_inverse.inc  gles_transpose.inc  main.cpp  uniform_FrontMaterial.inc  uniform_LightSource.inc
app/player/: CMakeLists.txt  main.cpp
app/sandbox/: CMakeLists.txt  sandbox.cpp
app/test_app/: CMakeLists.txt  osgEarth.h  osgViewer.h  test_app.cpp
app/test_eigen/: CMakeLists.txt  test_eigen.cpp
app/test_mem/: CMakeLists.txt  test_mem.cpp
default_project/assets/shaders/glcore/: error.program  gui.program  gui_fs.shader  gui_vs.shader  standard.program  standard_fs.shader  standard_vs.shader
doc/: asset.md  egg.md  entity.md  object.md  resource.md  vfs.md
include/egg/: Block.h  BlockScript.h  Codes.h  Coord.h  DataType.h  Event.h  EventQueue.h  Export.h  Factory.h  FileDirUtil.h  Log.h  Math.h  Media.h  Module.h  Node.h  NodePath.h  NodeVisitor.h  Object.h  Path.h  Platform.h  Plugins.h  Runtime.h  Serializer.h  Singleton.h  StringUtil.h  SystemArg.h  ThreadPool.h  Timer.h  ref_ptr.h
include/egg/Command/: Command.h  Console.h  Context.h  History.h  Parser.h  ResultStack.h
include/egg/Command/cmd/: CMDattribute.h  CMDobject.h  CMDsystem.h
include/egg/Reflection/: FunctionHandle.h  ObjectHandle.h  ValueHandle.h
include/eggApplication/: Application.h  Export.h
include/eggCfg/: Export.h
include/eggEditor/: Controller.h  Editor.h  Export.h  Panel.h  Selection.h  View.h
include/eggEngine/: Animation.h  Component.h  Composer.h  DataDefine.h  DefaultSetting.h  Draw.h  Engine.h  EntityManager.h  Export.h  Font.h  Geometry.h  GraphicsContext.h  IMGUI.h  Image.h  ImageIO.h  ImportExport.h  InputVisitor.h  Level.h  Material.h  Matrix.h  Pass.h  Program.h  ProgramDefine.h  Public.h  RenderCullMode.h  RenderNode.h  RenderPass.h  RenderState.h  RenderUpdater.h  RenderVisitor.h  RenderWindow.h  Renderer.h  Resource.h  ResourceManager.h  SaveLoad.h  Scene.h  SceneNode.h  Shader.h  Texture.h  View.h  (+3 more)
include/eggEngine/Components/: ActorControler.h  Camera.h  GUI.h  IconMesh.h  Joint3D.h  Light.h  MeshRender.h  SkeletonActorControler.h  Transfrom3D.h
include/eggMedia/: Export.h
include/eggNet/: DownloadTask.h  Downloader.h  Export.h  NetworkManager.h  Processor.h
modules/: CMakeLists.txt
modules/Application_test/: Application_test.cpp  CMakeLists.txt
modules/Editor_qt/: CMakeLists.txt  Editor_qt.cpp
modules/GraphicsContext_dx9/: CMakeLists.txt  GraphicsContext.cpp
modules/GraphicsContext_egl_mali/: CMakeLists.txt  GraphicsContext.cpp
modules/GraphicsContext_egl_ndk/: CMakeLists.txt  GraphicsContext.cpp
modules/GraphicsContext_glx/: CMakeLists.txt  GraphicsContext.cpp
modules/GraphicsContext_wgl/: CMakeLists.txt  GraphicsContext.cpp
modules/Platform_win32/: CMakeLists.txt  Platform_win32.cpp
modules/Renderer_dx9/: CMakeLists.txt  Renderer.cpp
modules/Renderer_glcore/: CMakeLists.txt  Renderer.cpp
modules/Renderer_gles1/: CMakeLists.txt  Renderer.cpp
modules/Renderer_gles2/: CMakeLists.txt  Renderer.cpp
modules/Window_win32/: CMakeLists.txt  Window_win32.cpp
modules/Window_x11/: CMakeLists.txt  Window_x11.cpp
modules/Windows_ndk/: CMakeLists.txt  Windows_ndk.cpp
src/: CMakeLists.txt
src/egg/: Block.cpp  BlockScript.cpp  CMakeLists.txt  Codes.cpp  Coord.cpp  Event.cpp  EventQueue.cpp  Factory.cpp  FileDirUtil.cpp  Media.cpp  Module.cpp  Node.cpp  Object.cpp  Path.cpp  Platform.cpp  Plugins.cpp  Runtime.cpp  StringUtil.cpp  Timer.cpp
src/egg/Command/: Command.cpp  Console.cpp  Context.cpp  History.cpp  Parser.cpp  ResultStack.cpp
src/egg/Command/cmd/: CMDattribute.cpp  CMDobject.cpp  CMDsystem.cpp
src/egg/Platform/: win32.cpp
src/egg/Reflection/: FunctionHandle.cpp  ObjectHandle.cpp  ValueHandle.cpp
src/eggApplication/: Application.cpp  CMakeLists.txt
src/eggEditor/: CMakeLists.txt  Controller.cpp  Editor.cpp  Panel.cpp  Selection.cpp  View.cpp
src/eggEngine/: Animation.cpp  CMakeLists.txt  Component.cpp  Composer.cpp  DefaultSetting.cpp  Engine.cpp  EntityManager.cpp  Geometry.cpp  GraphicsContext.cpp  Image.cpp  ImportExport.cpp  InputVisitor.cpp  Level.cpp  Material.cpp  Pass.cpp  Program.cpp  RenderCullMode.cpp  RenderNode.cpp  RenderPass.cpp  RenderState.cpp  RenderUpdater.cpp  RenderVisitor.cpp  RenderWindow.cpp  Renderer.cpp  Resource.cpp  ResourceManager.cpp  SaveLoad.cpp  Scene.cpp  SceneNode.cpp  Shader.cpp  Texture.cpp  View.cpp  VirtualFileSystem.cpp  Window.cpp
src/eggEngine/Components/: ActorControler.cpp  Camera.cpp  GUI.cpp  IconMesh.cpp  Joint3D.cpp  Light.cpp  MeshRender.cpp  SkeletonActorControler.cpp  Transfrom3D.cpp
src/eggEngine/VirtualFileSystem/: AndroidAssetArchive.cpp  AndroidAssetArchive.h  NativeArchive.cpp  NativeArchive.h  SZPArchive.cpp  SZPArchive.h  ZipArchive.cpp  ZipArchive.h
src/eggNet/: CMakeLists.txt  DownloadTask.cpp  Downloader.cpp  NetworkManager.cpp  Processor.cpp
test/: CMakeLists.txt
test/testCLR/: CMakeLists.txt  main.cpp  testBaseClass.h  testObjectHandle.h
test/testCMD/: CMakeLists.txt  main.cpp
test/testScript/: CMakeLists.txt  main.cpp
test/test_eggengine/: CMakeLists.txt  main.cpp  test_asset.h  test_matrix.h  test_vfs.h
test/test_eggruntime/: CMakeLists.txt  main.cpp  test_datatype.h  test_listender.h  test_module.h  test_node.h  test_path.h  test_serializer.h  test_smart_pointer.h
