
include(GoogleTest)
find_package(GTest)

MACRO(NIUBI_SETUP_TEST V)

    SET( OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin )
    if( CMAKE_SIZEOF_VOID_P EQUAL 8 )
        SET(OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin64) #64bit
    endif( CMAKE_SIZEOF_VOID_P EQUAL 8 )
    
    SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIRECTORY}")
    SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")
    SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIRECTORY}")
    SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")
    SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIRECTORY}")
    SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")
    
    IF(BUILD_STATIC_LIBRAY)
		ADD_DEFINITIONS(-DEGG_LIBRARY_STATIC)
	ENDIF(BUILD_STATIC_LIBRAY)
    
    include_directories(${GTEST_INCLUDE_DIR})
    add_executable(${TEST_NAME} ${TEST_SOURCES})
    target_link_libraries(${TEST_NAME} 
        debug ${GTEST_LIBRARY_DEBUG} optimized  ${GTEST_LIBRARY}
        debug ${GTEST_MAIN_LIBRARY_DEBUG} optimized  ${GTEST_MAIN_LIBRARY}
        )
    gtest_discover_tests (${TEST_NAME})
    
    SET_TARGET_PROPERTIES(${TEST_NAME} PROPERTIES FOLDER "Test")
    SET_TARGET_PROPERTIES(${TEST_NAME} PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
    
ENDMACRO(NIUBI_SETUP_TEST)

if( GTest_FOUND )
ADD_SUBDIRECTORY(test_eggruntime)
# ADD_SUBDIRECTORY(test_eggengine)
endif( GTest_FOUND )


ADD_SUBDIRECTORY(testCLR)
ADD_SUBDIRECTORY(testCMD)
ADD_SUBDIRECTORY(testScript)


