SET(NIUBI_SETUP_TARGET_NAME GraphicsContext_wgl)

INCLUDE_DIRECTORIES(AFTER ${PROJECT_SOURCE_DIR}/include/ )
INCLUDE_DIRECTORIES(AFTER ${PROJECT_SOURCE_DIR})

SET(NIUBI_SETUP_HEADERS

)

SET(NIUBI_SETUP_SOURCES

    GraphicsContext.cpp
)


NIUBI_SETUP_PLUGINS(ON)
TARGET_LINK_LIBRARIES( ${NIUBI_SETUP_TARGET_NAME} ${OPENGL_LIBRARIES} eggRuntime eggEngine )
NIUBI_SETUP_INSTALL()
NIUBI_SETUP_DOCUMENT()
