SET(NIUBI_SETUP_TARGET_NAME Platform_win32)
#add_definitions(-DEGG_RUNTIME_LIBRARY)

SET(NIUBI_SETUP_HEADERS

)
SET(NIUBI_SETUP_SOURCES
    
    Platform_win32.cpp
)

NIUBI_SETUP_PLUGINS(ON)
target_link_libraries(${NIUBI_SETUP_TARGET_NAME} 
        eggRuntime
        )
NIUBI_SETUP_INSTALL()
NIUBI_SETUP_INSTALL_INCLUDE()
NIUBI_SETUP_DOCUMENT()
