SET(NIUBI_SETUP_TARGET_NAME Renderer_dx_9)

INCLUDE_DIRECTORIES(AFTER ${PROJECT_SOURCE_DIR}/include/ )
INCLUDE_DIRECTORIES(AFTER ${PROJECT_SOURCE_DIR})

SET(NIUBI_SETUP_HEADERS

    #./Export.h
)

SET(NIUBI_SETUP_SOURCES

    ./Renderer.cpp
)

INCLUDE_DIRECTORIES(AFTER ${DX9_INCLUDE_DIR})

NIUBI_SETUP_PLUGINS(ON)
TARGET_LINK_LIBRARIES( ${NIUBI_SETUP_TARGET_NAME} ${DX9_LIBRARY} )
NIUBI_SETUP_INSTALL()
NIUBI_SETUP_DOCUMENT()
