SET(NIUBI_SETUP_TARGET_NAME Renderer_glcore)

INCLUDE_DIRECTORIES(AFTER ${PROJECT_SOURCE_DIR}/include/ )
INCLUDE_DIRECTORIES(AFTER ${PROJECT_SOURCE_DIR})

SET(NIUBI_SETUP_HEADERS

)

SET(NIUBI_SETUP_SOURCES
    ./Renderer.cpp
	# ${PROJECT_SOURCE_DIR}/3rdParty/glew-1.9.0/src/glew.c
)

INCLUDE_DIRECTORIES(AFTER ${_3RDPARTY_INCLUDE_DIR})

# IF(BUILD_STATIC_LIBRAY)
	#ADD_DEFINITIONS(-DGLEW_STATIC)
# ENDIF(BUILD_STATIC_LIBRAY)


NIUBI_SETUP_PLUGINS(ON)
TARGET_LINK_LIBRARIES( ${NIUBI_SETUP_TARGET_NAME} ${OPENGL_LIBRARIES}
	egg eggEngine
	optimized ${GLEW_LIBRARY_RELEASE}  debug ${GLEW_LIBRARY_DEBUG}
	)
NIUBI_SETUP_INSTALL()
NIUBI_SETUP_DOCUMENT()
