SET(NIUBI_SETUP_TARGET_NAME Renderer_gles_2_x)

INCLUDE_DIRECTORIES(AFTER ${PROJECT_SOURCE_DIR}/include/ )
INCLUDE_DIRECTORIES(AFTER ${PROJECT_SOURCE_DIR})

SET(NIUBI_SETUP_HEADERS

    # ./Export.h
)

SET(NIUBI_SETUP_SOURCES

    ./Renderer.cpp
)

IF(MALI_FOUND)
LINK_DIRECTORIES( ${MALI_LIBRARY_DIR})
ENDIF()

SET(EXT_LIB)

IF(MSVC)
    INCLUDE_DIRECTORIES(AFTER ${MALI_INCLUDE_DIR})
    LINK_DIRECTORIES( ${MALI_LIBRARY_DIR})
    SET(EXT_LIB ${EXT_LIB} ${MALI_GLES_2_LIBRARY} ${MALI_EMULATOR_LIBRARY})
ENDIF(MSVC)

NIUBI_SETUP_PLUGINS(ON)
TARGET_LINK_LIBRARIES( ${NIUBI_SETUP_TARGET_NAME} ${EXT_LIB} )
NIUBI_SETUP_INSTALL()
NIUBI_SETUP_DOCUMENT()

