SET(NIUBI_SETUP_TARGET_NAME Windows_ndk)

INCLUDE_DIRECTORIES(AFTER ${PROJECT_SOURCE_DIR}/include/ )
INCLUDE_DIRECTORIES(AFTER ${PROJECT_SOURCE_DIR})

SET(NIUBI_SETUP_HEADERS

    #./Export.h
)

SET(NIUBI_SETUP_SOURCES

    ./NativeWindow.cpp
)


NIUBI_SETUP_PLUGINS(ON)
# TARGET_LINK_LIBRARIES( ${NIUBI_SETUP_TARGET_NAME} osgXI )
NIUBI_SETUP_INSTALL()
NIUBI_SETUP_DOCUMENT()

